# TrimURL

./: docker-compose.yml
backend/: Dockerfile  migrations.sh  pyproject.toml
backend/app/: crud.py  main.py  models.py  schemas.py
backend/tests/: test_main.py
frontend/: Dockerfile  index.html
frontend/src/: App.jsx
