[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kariithi <emmanuelkaringi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
validators = "^0.33.0"
slowapi = "^0.1.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
